[gd_scene load_steps=2 format=3 uid="uid://o5np0sf873cq"]

[ext_resource type="Script" uid="uid://dmehyfgfiv2md" path="res://Scenes/rules/rule.gd" id="1_yfg40"]

[node name="Rule" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yfg40")

[node name="RuleInPlay" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="ShortDescription" type="RichTextLabel" parent="RuleInPlay"]
layout_mode = 2
size_flags_horizontal = 3
text = "RULE NAME :
Short description
Score : Short score description"
fit_content = true

[node name="MenuButton" type="OptionButton" parent="RuleInPlay"]
layout_mode = 2
size_flags_vertical = 4
disabled = true
item_count = 2
popup/item_0/text = "Player 1"
popup/item_0/id = 0
popup/item_1/text = "Player 2"
popup/item_1/id = 1

[node name="RuleInSetup" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -15.5
offset_right = 60.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
button_pressed = true
text = "Chouette"
alignment = 1
icon_alignment = 1

[connection signal="item_selected" from="RuleInPlay/MenuButton" to="." method="_on_menu_button_item_selected"]
[connection signal="toggled" from="RuleInSetup" to="." method="_on_rule_in_setup_toggled"]
